Moved fix for scrollable table header alignment in IE into themes.

--- a/icefaces/trunk/icefaces/core/src/com/icesoft/faces/resources/css/rime/rime-portlet.css
+++ b/icefaces/trunk/icefaces/core/src/com/icesoft/faces/resources/css/rime/rime-portlet.css
@@ -394,7 +394,10 @@ input.iceSelInpDateClosePopup {
     background: url( './css-images/table_col_header.gif' ) repeat-x bottom left; 
     border-top: 1px solid #d9d9d9; 
     border-right: 1px solid #d9d9d9;
-    margin-top:-1px;
+}
+.iceDatTblScrlSpr .iceDatTblColHdr1, .iceDatTblScrlSpr .iceDatTblColHdr2 {
+    border-left-style: none;
+    border-top-style: none;
 }
 
 .iceDatTblResHdlr {
