--- a/icefaces/trunk/icefaces/core/src/com/icesoft/faces/resources/css/royale/royale.css
+++ b/icefaces/trunk/icefaces/core/src/com/icesoft/faces/resources/css/royale/royale.css
@@ -344,7 +344,10 @@ input {
     background-color: #026AFF;
     border-top: 1px solid #026AFF;
     border-right: 1px solid #026AFF;
-    margin-top:-1px;
+}
+.iceDatTblScrlSpr .iceDatTblColHdr1, .iceDatTblScrlSpr .iceDatTblColHdr2 {
+    border-left-style: none;
+    border-top-style: none;
 }
 
 .iceDatTblResHdlr {
